@@ -179,7 +179,6 @@ CHECK_FUNCTION_EXISTS(strcasecmp             HAVE_STRCASECMP)
 
 CHECK_FUNCTION_EXISTS(strlcat                HAVE_STRLCAT)
 CHECK_FUNCTION_EXISTS(strlcpy                HAVE_STRLCPY)
-CHECK_FUNCTION_EXISTS(strtoll                HAVE_STRTOLL)
 CHECK_FUNCTION_EXISTS(vsnprintf              HAVE_VSNPRINTF)
 
 set(CMAKE_REQUIRED_LIBRARIES)
